certs for auth and gateway remove edit for service type